--- a/Durak/Durak/Durak.csproj
+++ b/Durak/Durak/Durak.csproj
@@ -67,6 +67,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Suit.cs" />
+    <EmbeddedResource Include="Durak.es.resx">
+      <DependentUpon>Durak.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Durak.fr.resx">
+      <DependentUpon>Durak.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Durak.resx">
       <DependentUpon>Durak.cs</DependentUpon>
     </EmbeddedResource>
