--- a/Durak/Durak/Durak.csproj
+++ b/Durak/Durak/Durak.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{CCE58A14-E7B6-4F02-9D63-16111EE77586}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <RootNamespace>Durak</RootNamespace>
     <AssemblyName>Durak</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
