--- a/Durak/Durak/Durak.csproj
+++ b/Durak/Durak/Durak.csproj
@@ -76,6 +76,12 @@
     <EmbeddedResource Include="Durak.resx">
       <DependentUpon>Durak.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="GameBoard.es.resx">
+      <DependentUpon>GameBoard.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GameBoard.fr.resx">
+      <DependentUpon>GameBoard.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="GameBoard.resx">
       <DependentUpon>GameBoard.cs</DependentUpon>
     </EmbeddedResource>
